<resources>
    <string name="app_name">BasicFramework</string>
    <string name="str_palm">掌上宝骏</string>
    <string name="str_service">生活服务</string>
    <string name="str_business">金融商场</string>
    <string name="str_social">车友社交</string>
    <string name="str_exit">确定退出凌云志航吗？</string>
    <string name="no_net">无网络连接</string>
    <string name="net_error">网络错误</string>
    <string name="loading">加载中…</string>
    <string name="str_mine">我的</string>
    <string name="str_index">首页</string>
    <string name="str_contact">通讯录</string>
    <string name="img_description">图片描述</string>
    <string name="str_message">消息</string>
    <string name="cancel">取消</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="str_ensure">确定</string>
    <string name="str_wander">再逛逛</string>
    <string name="str_info">提示</string>

</resources>
