<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_bottom"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_60"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/rl_index"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/img_index"
            android:layout_width="@dimen/dp_28"
            android:layout_height="@dimen/dp_28"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_6"
            android:contentDescription="@string/img_description"
            android:src="@drawable/welcome_bg" />

        <TextView
            android:id="@+id/txt_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_index"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_2"
            android:text="@string/str_index"
            android:textSize="@dimen/sp_10" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_message"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/img_message"
            android:layout_width="@dimen/dp_28"
            android:layout_height="@dimen/dp_28"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_6"
            android:contentDescription="@string/img_description"
            android:src="@drawable/welcome_bg" />

        <TextView
            android:id="@+id/txt_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_message"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_2"
            android:text="@string/str_message"
            android:textSize="@dimen/sp_10" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_contact"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/img_contact"
            android:layout_width="@dimen/dp_28"
            android:layout_height="@dimen/dp_28"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_6"
            android:contentDescription="@string/img_description"
            android:src="@drawable/welcome_bg" />

        <TextView
            android:id="@+id/txt_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_contact"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_2"
            android:text="@string/str_contact"
            android:textSize="@dimen/sp_10" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_mine"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/img_mine"
            android:layout_width="@dimen/dp_28"
            android:layout_height="@dimen/dp_28"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_6"
            android:contentDescription="@string/img_description"
            android:src="@drawable/welcome_bg" />

        <TextView
            android:id="@+id/txt_mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_mine"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_2"
            android:text="@string/str_mine"
            android:textSize="@dimen/sp_10" />

    </RelativeLayout>
</LinearLayout>